# jinkela

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  README.md.tmp  configure.h.in  extract_dependencies.py  gen_func1_table.py  install.sh  mypy.ini  plan.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.h.in  write_dependencies.py  write_readme.py
.github/workflows/: cd.yml  ci.yml
cmake/: compilers.cmake  elements.cmake  fmt.cmake  gtest.cmake  parameters.cmake  pydisort.cmake  pyharp.cmake  yamlpp.cmake
cmake/macros/: macro_setup_problem.cmake  macro_setup_test.cmake
cmake/modules/: FindDisort.cmake  FindHarp.cmake  FindNetCDF.cmake
data/: CH4.dat2  ch4_photolysis.yaml  chapman_cycle.yaml
doc/: dependencies.md  todo_list.txt
docs/: requirements.txt  template_statment.md  write_dependencies.py
docs/_static/: custom.css
docs/source/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
examples/: example_chapman_cycle.py  example_earth.py  example_earth_dry.py  example_jupiter.py  jupiter.yaml  test_type_hints.py
patches/: 01.yaml-cpp.patch  02.gtest.patch
python/: STUB_FILES.md  __init__.py  boundary.nominal.inp  chemtable.CH.txt  chemtable.CHN.txt  chemtable.moses05.CH.txt  chemtable.moses05.CHN.txt  chemtable.moses05.txt  chemtable.py  chemtable.py.sav  chemtable.py.sav2  chemtable.txt  kindata.titan.moses05.N15.arsl.inp  kininput.sav  kintera.pyi  test
python/csrc/: kintera.cpp  pyconstants.cpp  pykinetics.cpp  pyoptions.hpp  pyphotolysis.cpp  pythermo.cpp
src/: CMakeLists.txt  Photolysis.h  add_arg.h  constants.h  elements.cpp  elements.hpp  find_resource.cpp  find_resource.hpp  kintera_formatter.hpp  load_xsection_kinetics7.cpp  load_xsection_vulcan.cpp  loops.cuh  photo_opacity.hpp  photolysis.cpp_  photolysis.h  reaction.cpp  reaction.hpp  species.cpp  species.hpp
src/cli_legacy/: actinic_flux.cpp  actinic_flux.hpp  atm_chemistry.cpp  atm_chemistry.hpp  atm_chemistry_simulator.cpp  atm_chemistry_simulator.hpp  boundary.cpp  boundary.hpp  test_advection_diffusion.cpp  test_photochem_1d.cpp  test_photolysis_box.cpp  tridiagonal_solver.cpp
src/diffusion/: diffusion.cpp  diffusion.hpp
src/eos/: equation_of_state.cpp  equation_of_state.hpp  ideal_gas.hpp
src/kinetics/: Arrhenius.cpp  Arrhenius.h  Arrhenius.h_  ReactionData.h  ReactionRate.h  actinic_flux.hpp  arrhenius.cpp  arrhenius.hpp  coagulation.hpp  evaporation.cpp  evaporation.hpp  evolve_implicit.hpp  falloff.cpp  falloff.hpp  jacobian.hpp  jacobian_evaporation.cpp  jacobian_mass_action.cpp  jacobian_photolysis.cpp  kinetic_rate.cpp  kinetic_rate.hpp  kinetic_rate_options.cpp  kinetics.cpp  kinetics.h  kinetics.hpp  kinetics_formatter.hpp  kinetics_options.cpp  lindemann_falloff.cpp  lindemann_falloff.hpp  photolysis.cpp  photolysis.hpp  rate_constant.cpp  rate_constant.hpp  rate_options.cpp  rate_options.hpp  reaction_system.hpp  species_rate.cpp  species_rate.hpp  sri_falloff.cpp  sri_falloff.hpp  three_body.cpp  (+3 more)
src/math/: interpn.cpp  interpn.h  interpn.hpp  interpolation.hpp  leastsq.h  leastsq_kkt.h  locate.h  lubksb.h  ludcmp.h  luminv.h  math_dispatch.cpp  mmdot.h
src/rt/: rt.cpp  rt.hpp
src/solver/: explicit.cpp  explicit.hpp  implicit.cpp  implicit.hpp  solver.hpp
src/thermo/: .gitignore  cal_dlnT_dlnP.h  cal_dlnT_dlnP_impl.h  condensation.cpp  condensation.hpp  condensation_double_impl.h  condensation_impl.h  condensation_singular_impl.h  condensation_tp_impl.h  condenser.hpp  condenser_options.cpp  condenser_x.cpp  condenser_y.cpp  equilibrate_tp.cpp_  equilibrate_tp.h  equilibrate_uv.cpp_  equilibrate_uv.h  eval_uh.cpp  eval_uh.hpp  eval_uhs.cpp  eval_uhs.hpp  extrapolate_ad.cpp  extrapolate_ad.hpp  hydro_thermo.cpp  hydro_thermo.hpp  integrate_lnp_impl.h  integrate_z.cpp  integrate_z.h  integrate_z.hpp  integrate_z_impl.h  log_svp.cpp  log_svp.hpp  nucleation.cpp  nucleation.hpp  relative_humidity.cpp  relative_humidity.hpp  thermo.hpp  thermo_dispatch.cpp  thermo_dispatch.cpp_  thermo_dispatch.cu  (+10 more)
src/utils/: alloc.h  check_resize.cpp  constants.h  find_resource.cpp  fp_value.cpp  fp_value.hpp  func2.hpp  func3.hpp  get_value.hpp  parse_comp_string.cpp  parse_comp_string.hpp  parse_yaml.cpp  parse_yaml.hpp  serialize.cpp  serialize.hpp  stoichiometry.cpp  stoichiometry.hpp  to_lower_copy.cpp  units.cpp  units.h  utils_dispatch.cpp
src/vapors/: CMakeLists.txt  ammonia_vapors.hpp  ammonium_hydrosulfide_vapors.hpp  fit_ammonia.py  silicon_oxide_vapors.hpp  vapor_functions.cu  water_vapors.hpp
src/xsection/: kin7_xsection.cpp  kin7_xsection.hpp  load_xsection.hpp  load_xsection_kinetics7.cpp  load_xsection_vulcan.cpp  vulcan_xsection.hpp  xsection.hpp
tests/: CMakeLists.txt  PhotochemTitan.cpp  ch4_photolysis.cpp  ch4_photolysis.cpp_  chapman_cycle.yaml  device_testing.hpp  earth.yaml  jupiter.yaml  sample_reaction.yaml  sample_reaction_full.yaml  test_actinic_flux.cpp  test_ch4_photolysis.cpp  test_chapman_cycle.cpp  test_diffusion.cpp  test_earth.py  test_eos.cpp  test_falloff.cpp  test_falloff_forward.cpp  test_falloff_options.cpp  test_kinetics.cpp  test_kinetics_rates.cpp  test_photolysis.py  test_photolysis_kinetics.cpp  test_photolysis_options.cpp  test_reaction.cpp  test_rt.cpp  test_simple_solver.cpp  test_solver.cpp  test_thermo.cpp  test_yaml_parse.cpp  validate_stub_file.py
tests/vulcan/: benchmark_tp_sweep.py  kintera_rt.py  setup_chapman.py  test_1d_chapman_diffusion.py  test_1d_chapman_photo_diff.py  test_diffusion_vulcan.py  test_kintera_vs_vulcan.py  test_rt_pyharp.py  test_rt_vulcan.py  test_vulcan_integrator.py
z.junk/: libops.c  test.py
