[metadata]
name = kintera
version = 0.0.1
description = Mordern Photochemistry Library
long_description = file: docs/get_started.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/chengcli/kintera
author = Cheng Li
author_email = chengcli@umich.edu
keywords = atmosphere; photochemistry; kinetics
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://github.com/chengcli/kintera/
    Source = https://github.com/chengcli/kintera/src
    Tracker = https://github.com/chengcli/kintera/issues

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.9
packages = find:
install_requires =
  numpy
  cmake<=3.30
  torch>=2.7.0

# These options exclude data from the wheel file but not from the sdist
[options.exclude_package_data]
kintera = *.cpp, *.cu, *.h
